--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,13 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+//Собственные таблицы стилей
 @import "main";
 @import "article";
 @import "articles-list";
