app divided into admin and customer parst... almost

--- a/resources/sass/customer/main.scss
+++ b/resources/sass/customer/main.scss
@@ -20,6 +20,12 @@ body {
 
 }
 
+
+.main-logo-img {
+    border-radius: 70px;
+    filter: grayscale(50%);
+}
+
 .user-img {
     height: 75px;
     width: 75px;
