--- a/resources/sass/admin/main.scss
+++ b/resources/sass/admin/main.scss
@@ -2,11 +2,16 @@ body {
     background: url('/img/background-admin.jpg');
     background-size: cover;
     -webkit-backdrop-filter: grayscale(70%);
-    backdrop-filter: grayscale(70%);
+    backdrop-filter: grayscale(90%) brightness(75%);
 }
 
 .dashboard-block {
     margin: 15px;
     padding: 15px;
     background-color: #fff;
+}
+
+#app {
+    width: 1300px;
+    margin: 0 auto;
 }
