--- a/resources/sass/customer/main.scss
+++ b/resources/sass/customer/main.scss
@@ -119,3 +119,9 @@ a:hover {
 a>.article-header:hover {
     color: #c51f1a;
 }
+
+.current-menu {
+    font-weight: 700;
+    color: maroon;
+    text-decoration: underline;
+}
