--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,8 +1,8 @@
 body {
-  background: url("/img/background-admin.jpg");
-  background-size: cover;
+  background: url("/img/background-admin.png");
+  background-repeat: repeat;
   -webkit-backdrop-filter: grayscale(70%);
-  backdrop-filter: grayscale(90%) brightness(75%);
+  backdrop-filter: grayscale(120%) brightness(50%);
 }
 
 .dashboard-block {
@@ -11,9 +11,19 @@ body {
   background-color: #fff;
 }
 
+.content {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 #app {
   width: 1300px;
   margin: 0 auto;
+}
+
+.current-menu {
+  font-weight: 700;
+  color: maroon;
+  text-decoration: underline;
 }
 
 .source-container {
@@ -126,5 +136,55 @@ a:hover {
   font-style: italic;
   color: #999;
   font-size: small;
+}
+
+.category-control-block {
+  text-align: right;
+  border-top: 1px solid #ccc;
+}
+
+.news-container {
+  background-color: #ffffff;
+  margin: 25px;
+  padding: 15px;
+}
+
+.article-box {
+  margin-top: 25px;
+  border-bottom: 1px dashed #ccc;
+  display: flex;
+  justify-content: space-between;
+}
+
+.article-main-block {
+  /*width:80%;*/
+}
+
+.article-control-block {
+  width: 100px;
+  padding-top: 30px;
+}
+
+.article-control-link {
+  display: block;
+  width: 95px;
+  height: 24px;
+  color: gray;
+  /*border:1px solid gray;*/
+  /*border-radius: 12px;*/
+  text-align: left;
+}
+
+.ordering-block {
+  height: 25px;
+}
+
+.ordering-block div {
+  float: right;
+}
+
+.article-container {
+  background-color: #fff;
+  padding: 25px;
 }
 
