--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -1,3 +1,5 @@
 @import "admin/main";
 @import "admin/sources";
 @import "admin/categories";
+@import "admin/articles-list";
+@import "admin/article";
