--- a/resources/sass/admin/categories.scss
+++ b/resources/sass/admin/categories.scss
@@ -8,7 +8,7 @@
 .mega-anchor {
     display: block;
     //height: 150px;
-        
+
 }
 
 .newscategory {
@@ -59,3 +59,7 @@ a:hover {
 }
 
 
+.category-control-block {
+    text-align: right;
+    border-top: 1px solid #ccc;
+}
