--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17010,3 +17010,7 @@ readers do not read off random characters that represent icons */
   width: auto;
 }
 
+.shadowed-box {
+  box-shadow: 4px 4px 10px 2px rgba(150, 150, 150, 0.43);
+}
+
