--- a/resources/sass/admin/articles-list.scss
+++ b/resources/sass/admin/articles-list.scss
@@ -21,12 +21,10 @@
 }
 
 .article-control-link {
-    display: block;
-    width: 95px;
+    //display: block;
+    //width: 95px;
     height:24px;
     color: gray;
-    /*border:1px solid gray;*/
-    /*border-radius: 12px;*/
     text-align: left;
 }
 .ordering-block {
