--- a/resources/sass/admin/categories.scss
+++ b/resources/sass/admin/categories.scss
@@ -24,7 +24,7 @@
     .newscategory {
         padding: 15px;
         margin: 15px;
-        width: 590px;
+        width: 100%;
         /*heigh: 100%;*/
         overflow: hidden;
         background-color: #fff;
