--- a/resources/sass/admin/articles-list.scss
+++ b/resources/sass/admin/articles-list.scss
@@ -6,13 +6,18 @@
 
 .article-box {
     margin-top:25px;
-    border-bottom: 1px dashed #ccc;
+    border-top: 1px dashed #ccc;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
+    max-height: 300px;
 }
 
 .article-main-block {
-    /*width:80%;*/
+    width:80%;
+    padding: 25px;
+    overflow: hidden;
+    max-height: 300px;
 }
 
 .article-control-block {
