--- a/resources/sass/admin/article.scss
+++ b/resources/sass/admin/article.scss
@@ -7,4 +7,8 @@
 
 .article-illustration {
     float: left;
+    width:300px;
+    height: 196px;
+    object-fit: contain;
+    margin-right: 25px;
 }
