--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -27,6 +27,22 @@ body {
   text-decoration: underline;
 }
 
+.pagination > li > a,
+.pagination > li > span {
+  color: #555;
+  background-color: #fff;
+}
+
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+  background-color: #555 !important;
+  border-color: #ccc !important;
+}
+
 .source-container {
   padding: 25px;
   display: flex;
@@ -186,6 +202,15 @@ a:hover {
   max-height: 300px;
 }
 
+.article-box:hover {
+  background-color: #efefef;
+}
+
+.article-box:hover .article-illustration {
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
+}
+
 .article-control-block {
   width: 100px;
   padding-top: 30px;
@@ -216,8 +241,10 @@ a:hover {
   float: left;
   width: 300px;
   height: 196px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin-right: 25px;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 
