--- a/public/css/customer.css
+++ b/public/css/customer.css
@@ -117,9 +117,34 @@ a > .article-header:hover {
   text-decoration: underline;
 }
 
+.pagination > li > a,
+.pagination > li > span {
+  color: #555;
+  background-color: #fff;
+}
+
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+  background-color: #550a17 !important;
+  border-color: #ccc !important;
+}
+
 .article-container {
   background-color: #fff;
   padding: 25px;
+}
+
+.article-img {
+  float: left;
+  width: 300px;
+  height: 196px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 25px;
 }
 
 .news-container {
@@ -136,7 +161,24 @@ a > .article-header:hover {
 }
 
 .article-main-block {
-  /*width:80%;*/
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.article-main-block .article-img {
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+.article-main-block:hover {
+  background-color: #ccc;
+  outline: 1px solid #aaa;
+}
+
+.article-main-block:hover .article-img {
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
 }
 
 .article-control-block {
@@ -162,6 +204,13 @@ a > .article-header:hover {
   float: right;
 }
 
+.pages-nav-block {
+  padding: 25px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .categories-container {
   padding: 25px;
   display: flex;
@@ -171,6 +220,8 @@ a > .article-header:hover {
 
 .mega-anchor {
   display: block;
+  width: 100%;
+  height: 215px;
 }
 
 .newscategory {
@@ -245,5 +296,19 @@ a:hover {
   margin: 15px 0 0 0;
   display: flex;
   justify-content: space-around;
+}
+
+.article-container {
+  background-color: #fff;
+  padding: 25px;
+}
+
+.article-img {
+  float: left;
+  width: 300px;
+  height: 196px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 25px;
 }
 
