--- a/resources/sass/admin/article.scss
+++ b/resources/sass/admin/article.scss
@@ -9,6 +9,7 @@
     float: left;
     width:300px;
     height: 196px;
-    object-fit: contain;
+    object-fit: cover;
     margin-right: 25px;
+    filter: grayscale(100%);
 }
