--- a/resources/sass/admin/main.scss
+++ b/resources/sass/admin/main.scss
@@ -25,3 +25,24 @@ body {
     color: maroon;
     text-decoration: underline;
 }
+
+.pagination > li > a,
+.pagination > li > span {
+    color: #555; // use your own color here
+    background-color: #fff;
+}
+
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+    background-color: #555 !important;
+    border-color: #ccc !important;
+}
+//
+//.page .active> .page-link {
+//    background-color: #555;
+//    border-color: #ccc;
+//}
