--- a/resources/sass/customer/article.scss
+++ b/resources/sass/customer/article.scss
@@ -2,3 +2,14 @@
     background-color: #fff;
     padding: 25px;
 }
+
+.article-img {
+    float: left;
+    width:300px;
+    height: 196px;
+    object-fit: cover;
+    margin-right: 25px;
+
+}
+
+
