--- a/resources/sass/customer/articles-list.scss
+++ b/resources/sass/customer/articles-list.scss
@@ -12,8 +12,22 @@
 }
 
 .article-main-block {
-    /*width:80%;*/
+    width:100%;
+    height: 100%;
+    padding: 10px;
+    .article-img {
+        filter: grayscale(100%);
+    }
 }
+
+.article-main-block:hover {
+    background-color: #ccc;
+    outline: 1px solid #aaa;
+    .article-img {
+        filter: grayscale(0);
+    }
+}
+
 
 .article-control-block {
     width: 100px;
@@ -35,4 +49,11 @@
 
 .ordering-block div {
     float: right ;
+}
+
+.pages-nav-block {
+    padding:25px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
