--- a/resources/sass/admin/article.scss
+++ b/resources/sass/admin/article.scss
@@ -13,3 +13,9 @@
     margin-right: 25px;
     filter: grayscale(100%);
 }
+
+.icon-img {
+    height: 150px;
+    width: 150px;
+    object-fit: contain;
+}
