--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -248,3 +248,10 @@ a:hover {
           filter: grayscale(100%);
 }
 
+.icon-img {
+  height: 150px;
+  width: 150px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
