--- a/resources/sass/admin/main.scss
+++ b/resources/sass/admin/main.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .content {
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     padding: 15px;
 }
 
@@ -20,6 +20,7 @@ body {
     max-width: 1200px;
     margin: 25px auto;
 }
+
 .current-menu {
     font-weight: 700;
     color: maroon;
@@ -41,6 +42,7 @@ body {
     background-color: #555 !important;
     border-color: #ccc !important;
 }
+
 //
 //.page .active> .page-link {
 //    background-color: #555;
