added articles of first page

--- a/resources/sass/admin/main.scss
+++ b/resources/sass/admin/main.scss
@@ -33,6 +33,9 @@ body {
     background-color: #fff;
 }
 
+.pagination {
+    margin: 15px auto;
+}
 .pagination > .active > a,
 .pagination > .active > a:focus,
 .pagination > .active > a:hover,
