--- a/resources/sass/admin/article.scss
+++ b/resources/sass/admin/article.scss
@@ -15,7 +15,8 @@
 }
 
 .icon-img {
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 200px;
     object-fit: contain;
+    margin-bottom: 5px;
 }
