midified main form

--- a/public/css/customer.css
+++ b/public/css/customer.css
@@ -13,16 +13,19 @@ body {
   justify-content: space-between;
 }
 
+.bg-orange {
+  background-color: darkblue;
+  color: #fff !important;
+}
+
 .main-logo-img {
-  border-radius: 40px;
   -webkit-filter: grayscale(50%);
           filter: grayscale(50%);
-  width: 80px;
-  height: 80px;
+  height: 60px;
 }
 
 .searchform {
-  margin: 5px 10px 0 0;
+  margin: 5px 0 0 20px;
 }
 
 .user-img {
